# MUA

./: .gitignore  models.py  pyproject.toml
config/: default.py  development.py
mua/: __init__.py  models.py
mua/templates/: base.html  main.html  navbar.html  user.html
mua/templates/Banner/: searchBanner.html  userBanner.html
mua/templates/main/: main.html  user.html
mua/templates/navBar/: navbar.html
mua/util/: scheduler.py  scrap.py
mua/views/: main.py  user.py
test/: scheduler.py  scrap.py
